# ai_storybook_studio

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json
apps/api/: .env.example  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 2026_05_14_create_auth_tables.py  2026_05_18_add_model_to_book.py  2026_05_18_create_book_tables.py  2026_05_19_add_image_to_pages.py  2026_05_19_add_visibility_to_book.py  2026_05_19_migrate_images_to_minio.py
apps/api/requirements/: base.txt  dev.txt
apps/api/src/: config.py  database.py  exceptions.py  main.py
apps/api/src/auth/: config.py  constants.py  dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py  utils.py
apps/api/src/books/: dependencies.py  models.py  router.py  schemas.py  service.py
apps/api/src/generation/: constants.py  gemini.py  llm_client.py  ollama_client.py  pipeline.py  schemas.py
apps/api/src/generation/prompts/: system.py
apps/api/src/generation/stages/: characters.py  enhance.py  image.py  outline.py  pages.py  recalibrate.py
apps/api/src/storage/: minio_client.py
apps/api/tests/: conftest.py
apps/api/tests/auth/: test_auth.py
apps/web/: package.json
apps/web/.lovable/: plan.md
apps/web/src/: middleware.ts  routeTree.gen.ts  styles.css
apps/web/src/app/: globals.css  layout.tsx
apps/web/src/components/: book-header.tsx  providers.tsx
apps/web/src/lib/: api.ts  auth-context.tsx  book-store.tsx  mock-book.ts  use-relative-time.ts
infra/docker/: api.Dockerfile
scripts/: sync-lovable.sh
(+18 files in other folders)
